<resources>

    <string name="app_name">My Calculator</string>
    <string name="action_settings">Nothing!!!</string>
    <string name="input"></string>
    <string name="answer"></string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="cancel">C</string>
    <string name="percent">%</string>
    <string name="delete">DEL</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="dim">/</string>

</resources>
